UIEXT-1260: Change method to get override value
...by introducing a SettingsConverter which abstacts most of the
transformation logic previosly only used in the
DefaultNodeSettingsService but now also required in the data service

Using the DefaultNodeSettingsService directly would make sense, since we
are only interested in a certain part of the transformation (only one
type (model or view) and no schema/uischema generation)

UIEXT-1260 (Provide flow variables for set of types)